// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskForm should render correctly 1`] = `
Array [
  <div
    className="task-form-inputs"
>
    <TaskTitleInput
        handleChange={[Function]}
        value="A title"
    />
    <TaskDescriptionInput
        handleChange={[Function]}
        value="A description"
    />
</div>,
  <div
    className="task-form-actions"
>
    <TaskSubmitButton
        onClick={[Function]}
    />
</div>,
]
`;

exports[`TaskForm should update description 1`] = `
Array [
  <div
    className="task-form-inputs"
>
    <TaskTitleInput
        handleChange={[Function]}
        value="A title"
    />
    <TaskDescriptionInput
        handleChange={[Function]}
        value="Updated description"
    />
</div>,
  <div
    className="task-form-actions"
>
    <TaskSubmitButton
        onClick={[Function]}
    />
</div>,
]
`;

exports[`TaskForm should update title 1`] = `
Array [
  <div
    className="task-form-inputs"
>
    <TaskTitleInput
        handleChange={[Function]}
        value="Updated title"
    />
    <TaskDescriptionInput
        handleChange={[Function]}
        value="A description"
    />
</div>,
  <div
    className="task-form-actions"
>
    <TaskSubmitButton
        onClick={[Function]}
    />
</div>,
]
`;
